<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hiking Route Planner</string>
    <string name="action_settings">Settings</string>
    <string name="import_route">Import Route</string>
    <string name="draw_route">Draw Route</string>
    <string name="export_route">Export</string>
    <string name="title_activity_select_route">Routes</string>
    <string name="show_on_map">Show on Map</string>
    <string name="show_details">Details</string>
    <string name="select_map_layer">Select Map Layer</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="yes">Yes</string>
    <string name="exit_drawing">Exit Drawing</string>
    <string name="go_back">Go Back</string>
    <string name="exit_drawing_message">The drawn route has not been saved, are you sure you want to quit drawing?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="route_name">Route Name</string>
    <string name="hide_from_map">Hide from Map</string>
    <string name="distance">Distance</string>
    <string name="distance_round_trip">Distance (Round Trip)</string>
    <string name="trip_time">Trip Time</string>
    <string name="return_trip_time">Return Trip Time</string>
    <string name="total_time">Total Time</string>
    <string name="elevation_gain">Elevation Gain</string>
    <string name="elevation_loss">Elevation Loss</string>
    <string name="remove_route_message">Do you want to delete the selected route(s)?</string>
    <string name="remove_route">Remove Route</string>
    <string name="remove_track_message">Do you want to delete the selected track(s)?</string>
    <string name="remove_track">Remove Track</string>
    <string name="remove">Remove</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="edit_route">Edit Route</string>
    <string name="use_default_parameters">Use Default Parameters</string>
    <string name="add">Add</string>
    <string name="mins">mins per</string>
    <string name="ascent">ascent</string>
    <string name="speed">Speed:</string>
    <string name="speed_unit">km/h</string>
    <string name="height_unit">m</string>
    <string name="descent">descent</string>
    <string name="title_activity_default_parameters_settings">Default Parameters Settings</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="parameter_input_invalid">Invalid Parameters</string>
    <string name="parameter_input_invalid_message">Parameter inputs cannot be empty and must be numerical, speed and height inputs cannot be zero</string>
    <string name="parameters">Parameters</string>
    <string name="edit_parameters">Edit Parameters</string>
    <string name="discard">Discard</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_route_name">Change Route Name</string>
    <string name="file_name">File Name</string>
    <string name="name">Name:</string>
    <string name="export_route_dialog_title">Export Route</string>
    <string name="use_imperial_elevation">Use Imperial Elevation (GPX only)</string>

    <string-array name="export_file_types">
        <item>GPX</item>
        <item>KML</item>
    </string-array>

    <string name="export_conflict_message"> already exists, do you want to overwrite it?</string>
    <string name="no">No</string>
    <string name="export_conflict">Export Conflict</string>
    <string name="reverse">Reverse</string>
    <string name="edit_in_progress">Edit in Progress</string>
    <string name="track_editing_message">The selected track is being edited, please wait until editing is finished</string>
    <string name="route_editing_message">The selected route is being edited, please wait until editing is finished</string>
    <string name="title_activity_simple_calculator">Calculator</string>
    <string name="elevation_change">Elevation Change</string>
    <string name="calculate">Calculate</string>
    <string name="results">Results</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="invalid_input_message">Please enter numerical distance and elevation change</string>
    <string name="update_elevations">Update Elevations</string>
    <string name="update_elevations_message">Do you want to update all elevations or part of the elevations (elevations equal to zero)?</string>
    <string name="update_elevations_message_warning">Do you want to update all elevations or part of the elevations (elevations outside a defined range in next step)? 
        (Update will erase all/part of previous data, we recommend you to backup the track first)</string>
    <string name="all">All</string>
    <string name="part">Part</string>
    <string name="icon_file_description">file_icon</string>
    <string name="title_activity_about">About</string>
    <string name="about">About</string>
    <string name="unhide_description">Unhide the last hidden route</string>
    <string name="agree">I Agree</string>
    <string name="do_not_agree">I Do Not Agree</string>
    <string name="eula">End User License Agreement</string>
    <string name="help">Help</string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="open">Open</string>
    <string name="sort_alphabetically">Sort Alphabetically</string>
    <string name="new_item">Add New Item</string>
    <string name="new_category">Add New Category</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_category">Edit Category</string>
    <string name="title_activity_general_import">Open/Import</string>
    <string name="general_import_title">Open/Import</string>
    <string name="general_import_message">Are you sure you want to open/import</string>
    <string name="new_name">New Name:</string>
    <string name="new_name_used">New Name: (Name has been used)</string>
    <string name="remove_category_message">Do you want to delete the selected category?</string>
    <string name="remove_category">Remove Category</string>
    <string name="title_activity_general_export">Save/Export</string>
    <string name="deselect_all_title">Deselect All</string>
    <string name="deselect_all_message">Are you sure you want to clear all selections here?</string>
    <string name="select_all_title">Select All</string>
    <string name="select_all_message">Would you like to select all items here?</string>
    <string name="change_checklist_title">Change Checklist Title</string>
    <string name="category_marker">Category Marker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="stop_tracking_message">Would you like to stop tracking?</string>
    <string name="title_activity_select_track">Tracks</string>
    <string name="title_activity_track_details">Track Details</string>
    <string name="import_track">Import Track</string>
    <string name="export_track">Export Track</string>
    <string name="change_track_name">Change Track Name</string>
    <string name="track_name">Track Name</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="elevation_gain_one_way">Elevation Gain (One Way)</string>
    <string name="elevation_loss_one_way">Elevation Loss (One Way)</string>
    <string name="max_elevation">Max Elevation</string>
    <string name="min_elevation">Min Elevation</string>
    <string name="avg_speed">Average Speed</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="choose_track_name">Choose Track Name</string>
    <string name="choose_route_name">Choose Route Name</string>
    <string name="choose_elevation_unit">Is the elevation data metric or imperial?</string>
    <string name="choose_import_type">What would you like to import?</string>
    <string name="title_activity_route_details">Route Details</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Would you like to delete this item?</string>
    <string name="enter_max_elevation">Enter Max Elevation</string>
    <string name="enter_min_elevation">Enter Min Elevation</string>
    <string name="define_elevation_range">Define Elevation Range</string>
    <string name="part_dotted">Part&#8230;</string>
    <string name="total_elevation_gain">Total Elevation Gain: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="discard_track">Discard Track</string>
    <string name="discard_track_message">The track has not been saved. Are you sure you want to discard it?</string>
    <string name="number_of_hikes">Number of Hikes: </string>
    <string name="total_time_text">Total Time: </string>
    <string name="track_recovered">Track Recovered</string>
    <string name="track_recovered_message">Your last track has been recovered to</string>
    <string name="error">Error</string>
    <string name="track_recovery_error_message">Track Recovery Failed</string>
    <string name="tracking">Tracking</string>
    <string name="requesting_elevations">Requesting Elevations</string>

</resources>