<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/track"
        android:icon="@drawable/ic_track"
        android:showAsAction="ifRoom"
        android:title="@string/start_tracking"/>
    <item
        android:id="@+id/stop_tracking"
        android:icon="@drawable/ic_stop"
        android:showAsAction="ifRoom"
        android:title="@string/stop_tracking"/>
    <item
        android:id="@+id/unhide"
        android:icon="@drawable/ic_unhide"
        android:showAsAction="ifRoom"
        android:title="@string/unhide_description" />
    <item
        android:id="@+id/draw"
        android:icon="@drawable/ic_draw_route"
        android:showAsAction="ifRoom"
        android:title="@string/draw_route"/>
    <item
        android:id="@+id/import_route"
        android:icon="@drawable/ic_import"
        android:showAsAction="ifRoom"
        android:title="@string/import_route"/>
    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="ifRoom"
        android:title="@string/undo"/>
    <item
        android:id="@+id/redo"
        android:icon="@drawable/ic_action_redo"
        android:showAsAction="ifRoom"
        android:title="@string/redo"/>
    <item
        android:id="@+id/reverse"
        android:icon="@drawable/ic_reverse"
        android:showAsAction="ifRoom"
        android:title="@string/reverse"/>
    <item
        android:id="@+id/discard"
        android:icon="@drawable/ic_delete"
        android:showAsAction="ifRoom"
        android:title="@string/discard"/>
    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_done"
        android:showAsAction="ifRoom"
        android:title="@string/done"/>
    <item
        android:id="@+id/show_details"
        android:icon="@drawable/ic_details"
        android:showAsAction="ifRoom"
        android:title="@string/show_details"/>
    <item
        android:id="@+id/hide_from_map"
        android:icon="@drawable/ic_hide"
        android:showAsAction="ifRoom"
        android:title="@string/hide_from_map"/>
    <item
        android:id="@+id/edit_route"
        android:icon="@drawable/ic_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit_route"/>
    <item
        android:id="@+id/export_route"
        android:icon="@drawable/ic_export"
        android:showAsAction="ifRoom"
        android:title="@string/export_route"/>
    <item
        android:id="@+id/remove_route"
        android:icon="@drawable/ic_remove"
        android:showAsAction="never"
        android:title="@string/remove"/>
    <item
        android:id="@+id/select_map_layer"
        android:icon="@drawable/ic_select_map_layer"
        android:showAsAction="ifRoom"
        android:title="@string/select_map_layer"/>
    <item
        android:id="@+id/help"
        android:showAsAction="never"
        android:title="@string/help"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>