<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/open_checklist"
        android:icon="@drawable/ic_open_bw"
        android:showAsAction="ifRoom"
        android:title="@string/open"/>
    <item
        android:id="@+id/save_checklist"
        android:icon="@drawable/ic_save_bw"
        android:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/new_category"
        android:icon="@drawable/ic_new_item"
        android:showAsAction="ifRoom"
        android:title="@string/new_category"/>
    <item
        android:id="@+id/new_item"
        android:icon="@drawable/ic_new_item"
        android:showAsAction="ifRoom"
        android:title="@string/new_item"/>
    <item
        android:id="@+id/sort_alphabetically"
        android:icon="@drawable/ic_sort_alphabetically"
        android:showAsAction="ifRoom"
        android:title="@string/sort_alphabetically"/>
    <item
        android:id="@+id/change_checklist_title"
        android:showAsAction="never"
        android:title="@string/change_checklist_title"/>
    <item
        android:id="@+id/selectAll"
        android:showAsAction="never"
        android:title="@string/select_all"/>
    <item
        android:id="@+id/deselectAll"
        android:showAsAction="never"
        android:title="@string/deselect_all"/>
    <item
        android:id="@+id/help"
        android:showAsAction="never"
        android:title="@string/help"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>