<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".RouteDetailsActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="?android:attr/actionBarSize" >

        <TextView
            android:id="@+id/route_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/route_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_route_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/route_name"
            android:text="@string/distance"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/route_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/route_name"
            android:layout_toLeftOf="@id/this_distance_unit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distance_round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/distance"
            android:text="@string/distance_round_trip"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_distance_round_trip_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/distance"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_distance_round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/distance"
            android:layout_toLeftOf="@id/this_distance_round_trip_unit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/distance_round_trip"
            android:text="@string/trip_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/distance_round_trip"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/return_trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/trip_time"
            android:text="@string/return_trip_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_return_trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/trip_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/return_trip_time"
            android:text="@string/total_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/return_trip_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/elevation_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/total_time"
            android:text="@string/elevation_gain_one_way"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_elevation_gain_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/total_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_elevation_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_time"
            android:layout_toLeftOf="@id/this_elevation_gain_unit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/elevation_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/elevation_gain"
            android:text="@string/elevation_loss_one_way"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_elevation_loss_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/elevation_gain"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/this_elevation_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/elevation_gain"
            android:layout_toLeftOf="@id/this_elevation_loss_unit"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/elevation_profile_layout"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_below="@id/elevation_loss"
            android:paddingTop="5dp" >

            <LinearLayout
                android:id="@+id/elevation_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/route_name"
            android:layout_below="@id/elevation_profile_layout"
            android:layout_marginTop="10dp"
            android:text="@string/parameters"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/route_name"
            android:layout_below="@id/parameters"
            android:layout_marginTop="5dp"
            android:text="@string/speed"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/speed_input"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/speed"
            android:layout_toRightOf="@+id/speed"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="4" />

        <TextView
            android:id="@+id/speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/speed"
            android:layout_alignBottom="@+id/speed"
            android:layout_toRightOf="@+id/speed_input"
            android:text="@string/speed_unit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/add1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/speed"
            android:layout_below="@+id/speed"
            android:layout_marginTop="5dp"
            android:text="@string/add"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ascendTimeIncrease"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add1"
            android:layout_toRightOf="@+id/add1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:nextFocusDown="@+id/ascendHeightInput" />

        <TextView
            android:id="@+id/min1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add1"
            android:layout_toRightOf="@+id/ascendTimeIncrease"
            android:text="@string/mins"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ascendHeightInput"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add1"
            android:layout_toRightOf="@+id/min1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4"
            android:nextFocusDown="@+id/descendTimeIncrease" />

        <TextView
            android:id="@+id/height_unit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add1"
            android:layout_toRightOf="@+id/ascendHeightInput"
            android:text="@string/height_unit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ascent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add1"
            android:layout_alignBottom="@+id/add1"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/height_unit1"
            android:text="@string/ascent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/add2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/speed"
            android:layout_below="@+id/ascendTimeIncrease"
            android:layout_marginTop="5dp"
            android:text="@string/add"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/descendTimeIncrease"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add2"
            android:layout_toRightOf="@+id/add2"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="4"
            android:nextFocusDown="@+id/descentHeightInput" />

        <TextView
            android:id="@+id/min2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add2"
            android:layout_toRightOf="@+id/descendTimeIncrease"
            android:text="@string/mins"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/descentHeightInput"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/min2"
            android:layout_toRightOf="@+id/min2"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

        <TextView
            android:id="@+id/height_unit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add2"
            android:layout_alignBottom="@+id/add2"
            android:layout_toRightOf="@+id/descentHeightInput"
            android:text="@string/height_unit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add2"
            android:layout_alignBottom="@+id/add2"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/height_unit2"
            android:text="@string/descent"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/default_parameters_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/descent"
            android:layout_marginTop="10dp"
            android:text="@string/use_default_parameters" />

        <Button
            android:id="@+id/edit_parameters_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/default_parameters_checkBox"
            android:layout_marginTop="10dp"
            android:onClick="editParameters"
            android:text="@string/edit_parameters" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/default_parameters_checkBox"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveParametersChanges"
                android:text="@string/save_changes" />

            <Button
                android:id="@+id/discard_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="discardParametersChanges"
                android:text="@string/discard" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>